tests/algorithms/x/Pascal/dynamic_programming/catalan_numbers.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/dynamic_programming/catalan_numbers.pas
catalan_numbers.pas(69,11) Error: overloaded functions have the same parameter list
catalan_numbers.pas(37,11) Error: Found declaration: panic(ShortString);
catalan_numbers.pas(71,11) Error: overloaded functions have the same parameter list
catalan_numbers.pas(37,11) Error: Found declaration: panic(ShortString);
catalan_numbers.pas(69,11) Error: Found declaration: panic(ShortString);
catalan_numbers.pas(114) Fatal: There were 5 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
